fix(home and sizing)
root to full vh, extra margins removed, flex on home

--- a/frontend/src/Home/Home.css
+++ b/frontend/src/Home/Home.css
@@ -1,9 +1,14 @@
 .Home {
-    /* display: flex;
+    display: flex;
     flex-direction: column;
-    justify-content: space-between; */
+    justify-content: space-between;
+    overflow-y: hidden;
     position: relative;
     top: 0;
+}
+
+.Home .center-title {
+    margin-top: 57.5px;
 }
 
 .Home h1 {
@@ -15,9 +20,5 @@
 .Home h3 {
     font-size: 22.56px;
     font-weight: bold;
-    margin: 60px 0 12px 0;
-}
-
-.Home p.subtitle {
-    margin-bottom: 250px;
+    margin-bottom: 0;
 }
