--- a/frontend/src/Layout/Footer.css
+++ b/frontend/src/Layout/Footer.css
@@ -1,8 +1,9 @@
+
+
 nav {
     display: flex;
     justify-content: space-around;
-    align-content: center;
-    padding-top: 12px;
+    align-items: center;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -14,6 +15,14 @@ nav {
 
 nav a {
     color: var(--white);
+    height: 38px;
+}
+
+nav svg {
+    height: 28px;
+    width: 28px;
+    position: relative;
+    bottom: 7px;
 }
 
 nav a:active {
